*********************************************************************************************
*                                  CHANGE LOG 1.0.0 - > 1.x.x                               *
*********************************************************************************************
  
  * (4/4/2011) Petr Miko
    # 196

      CHANGED: In EDEDBController is now HashSet of currently downloading file ids. Logic edited in order to use it -> solves bug of case, when user switched owner/subject mode and downloading file began report itself as corrupted.

  * (4/3/2011) Petr Miko
    # 195

      CHANGED: "working" panel visibility bug solved in EDEDBController
      CHANGED: table models of EDEDB were extendend + bug solving
      CHANGED: a bit repaired file loading in case of wrong format (only in VDefLoader) + openFile is boolean now (returns state of opening)
      ADDED:   new JUnit test files with comments for EDEDB, editing the existing ones. JUnit testing for EDEDB should be completed now.

  * (4/2/2011) Petr Miko
    # 194
     
      CHANGED: edition in build.xml (in case of testing, there was severe bug with run classpath - now within test-bin folder).
      CHANGED: EDEDBControllerTest.java has comments now.  

  * (4/2/2011) Petr Miko
    # 193
	CHANGED: EDEDB Controller.java is EDEDBController.java now (so name should be more clear).
	ADDED: ControllerTest.java file, which should be in previous commit (my fault).

  * (4/2/2011) Petr Miko
    # 192
	CHANGED: corrected few bugs in EDEDB.
	CHANGED: add JUnit.jar, build.xml edited in order to provide JUnit tests.
	ADDED: test-src folder, ControllerTest.java test file.

  * (4/1/2011) Petr Miko
    # 191
	CHANGED: EDEDClient: new webservice generated files, MTOM now set by getEndpoint.put method instead of properties hash map.
	CHANGED: JERPALang: new translations and corrections in ededb section.